--- a/css/theme.css
+++ b/css/theme.css
@@ -443,6 +443,7 @@ label {
   background: #ffffff fixed no-repeat;
   position: relative;
   z-index: 1;
+  padding: 61px 0 0 0;
 }
 .section.splash h1 {
   font-size: 50px;
@@ -450,8 +451,10 @@ label {
   margin-bottom: 30px;
 }
 .section-headlines {
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
   text-align: center;
+  width: 100%;
+  /* background: #fff; */
 }
 .section-headlines > h2 {
   font-size: 32px;
@@ -484,23 +487,26 @@ label {
   filter: alpha(opacity=85);
 }
 .splash-block {
-  position: absolute;
-  left: 0;
-  top: 0;
+  position: relative;
+  /* left: 0; */
+  /* top: 0; */
   width: 100%;
   height: 100%;
   z-index: 100;
 }
 .splash-block .container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  display: inline-block;
+  /* position: absolute; */
+  /* top: 50%; */
+  /* left: 50%; */
+  /* transform: translate(-50%,-50%); */
+  /* display: inline-block; */
   vertical-align: middle;
   text-align: center;
   width: 100%;
-  padding: 100px 0;
+  padding: 0;
+  /* max-height: 100vh; */
+  /* padding-top: 61px; */
+  height: 100%;
 }
 .centered {
   display: inline-block;
@@ -686,9 +692,6 @@ label {
   .section.splash h1 {
     font-size: 40px;
   }
-  .person-avatar img {
-    width: 80px;
-  }
 }
 @media (min-width: 768px) and (max-width: 979px) {
   /*= RESPONSIVE RESET
@@ -709,12 +712,20 @@ label {
 }
 
 .nav-bar-logo {
-  height: 30px;
+  height: 60px;
 }
 
 .main-logo {
-  width: 70%;
-  margin-top: 116px;
+  position: relative;
+  width: auto;
+  max-width: calc(100vw - 30px);
+  height: auto;
+  max-height: calc(100vh - 65px);
+}
+
+.centered-img {
+   margin-top: 2em;
+   width: 150px;
 }
 
 .navbar-toggle {
@@ -734,4 +745,14 @@ label {
     width: 25px;
     height: 3px;
     border-radius: 1px;
+}
+
+.navbar-brand {
+  padding: 0;
+}
+
+.portrait {
+  width: 100%;
+  max-width: 250px;
+  margin-bottom: 3em;
 }
